--- a/index.html
+++ b/index.html
@@ -152,15 +152,21 @@
       </div>
     </div>
   </div>
+
   <!-- end first session-->
   <!--start 1st session-->
 
   <div class="second-session">
     <div class="slider">
-      
+
       <div class="row">
         <div class="col-md-6 col-3">
-
+          <h4 class="text-font "> Beautiful Websites,
+            <br>Online in Minutes.</h4>
+          <p id="text">Get your site up and running in no timewith
+            <br> our super simple set up & hosting sevice
+          </p>
+          <input class="browse-button" type="button" value="Browse Design">
         </div>
         <div class="col-md-6 col-9 ">
           <div class="testimonials">
@@ -176,11 +182,7 @@
               </div>
 
             </div>
-            <div class="owl-dots">
-              <div class="owl-dot active"><span></span></div>
-              <div class="owl-dot"><span></span></div>
-              <div class="owl-dot"><span></span></div>
-          </div>
+           
           </div>
         </div>
       </div>
@@ -189,6 +191,87 @@
 
     </div>
   </div>
+  <div >
+    <div class="secondsession-half">
+
+      <div class="designs">
+        <div class="row">
+          <div class=col-md-4>
+            <img class="img-position" src="images/logofour.png" height="70px">
+            <h4>Hundred of Design</h4>
+            <p class="first-description">A huge library of top quality designs,
+              <br> built by some of the best theme
+              <br> authors in the world.you'll be sure
+              <br> to find one that suits your needs.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img class="img-position" src="images/logothree.png" height="70px">
+            <h4>Simple and Quick</h4>
+            <p class="second-description">No matter which platform option
+              <br> you choose, your website will be
+              <br> online and ready to customise in
+              <br> a matter of minutes.</p>
+          </div>
+          <div class="col-md-4">
+            <img class="img-position" src="images/logotwo.png" height="65px">
+            <h4>Support and Guidance</h4>
+            <p class="third-description">We're here to help with premium
+              <br> support for all our websites.
+              <br> We will help you get over
+              <br> any hurdles that get in
+              <br> your way with great support.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="third-session">
+    <h2>Choose the right design for you,from our top charts</h2>
+      <div class="row">
+        <div class="col-md-2">
+          <img class="img-size animated fadeInUp " src="images/demo.png">
+        </div>
+        <div class="col-md-2">
+            <img class="img-size  animated fadeInDown" style=" -webkit-animation-delay: 2s"src="images/demo.png">
+          </div>
+          <div class="col-md-2">
+              <img class="img-size animated fadeInUp" style=" -webkit-animation-delay: 3s" src="images/demo.png">
+            </div>
+            <div class="col-md-2">
+                <img class="img-size  animated fadeInDown"style=" -webkit-animation-delay: 4s;" src="images/demo.png">
+              </div>
+              <div class="col-md-2">
+                  <img class="img-size animated fadeInUp" style=" -webkit-animation-delay: 5s;" src="images/demo.png">
+                </div>
+                <div class="col-md-2">
+                    <img class="img-size  animated fadeInDown" style=" -webkit-animation-delay: 6s;" src="images/demo.png">
+                  </div>
+      </div>
+
+    </div>
+
+ <div class="footer-one">
+   <div class="row">
+     <div class="col-md-6">
+       <p>Get in touch</p>
+       <p>You need more information? Check what other persons are saying<br>
+      about your products. They are very happy with their sell and purchase.</p>
+      <p><img src="images/cltn.png"> Find us at the office</p>
+      <p>House 1/2 Nurjahan Road<br>
+        Mohammadpur|Dhaka
+      </p>
+      <p><img src="images/call.png">Give us a Ring</p>
+      <p>Phone:01763432203<br>
+       E-mail:rongtuli.net@gmail.com
+      </p>
+     </div>
+     <div class="col-md-6">
+
+     </div>
+   </div>
+
+ </div>
 
 
   <!-- jQuery  -->
