--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a class="nav-link" href="#">Graphics</a>
           </li>
           <li class="nav-item active dropdown">
-            <a class="btn btn-secondary btn-sm dropdown-toggle dropbtn" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="btn btn-secondary btn-sm dropdown-toggle dropbtn"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Web Element
             </a>
             <span class="caret"></span>
