--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </a>
             <span class="caret"></span>
             </a>
-            <ul class="dropdown-menu dropdown-content">
+            <ul class="dropdown-menu dropdown-content dd-webelement">
               <li>
                 <a class="dropdown-item" href="#">Popular Items</a>
               </li>
@@ -145,7 +145,7 @@
       <div class="  text ">
         <p class="animated 	fadeInUp font">The biggest
         </p>
-        <hr>
+        <hr class="blue-hr">
         <p class=" animated fadeInDown fontone">
           Design place in BD
         </p>
@@ -197,26 +197,26 @@
       <div class="designs">
         <div class="row">
           <div class=col-md-4>
-            <img class="img-position" src="images/logofour.png" height="70px">
-            <h4>Hundred of Design</h4>
-            <p class="first-description">A huge library of top quality designs,
+            <img class="img-position animated fadeInUp" src="images/logofour.png" height="70px ">
+            <h4 class="animated fadeInUp">Hundred of Design</h4>
+            <p class="first-description animated fadeInUp">A huge library of top quality designs,
               <br> built by some of the best theme
               <br> authors in the world.you'll be sure
               <br> to find one that suits your needs.
             </p>
           </div>
           <div class="col-md-4">
-            <img class="img-position" src="images/logothree.png" height="70px">
-            <h4>Simple and Quick</h4>
-            <p class="second-description">No matter which platform option
+            <img class="img-position animated fadeInUp" src="images/logothree.png" height="70px">
+            <h4 class="animated fadeInUp">Simple and Quick</h4>
+            <p class="second-description animated fadeInUp">No matter which platform option
               <br> you choose, your website will be
               <br> online and ready to customise in
               <br> a matter of minutes.</p>
           </div>
           <div class="col-md-4">
-            <img class="img-position" src="images/logotwo.png" height="65px">
-            <h4>Support and Guidance</h4>
-            <p class="third-description">We're here to help with premium
+            <img class="img-position animated fadeInUp" src="images/logotwo.png" height="65px">
+            <h4 class="animated fadeInUp">Support and Guidance</h4>
+            <p class="third-description animated fadeInUp">We're here to help with premium
               <br> support for all our websites.
               <br> We will help you get over
               <br> any hurdles that get in
@@ -250,29 +250,72 @@
       </div>
 
     </div>
-
+<!--contact-->
  <div class="footer-one">
    <div class="row">
      <div class="col-md-6">
-       <p>Get in touch</p>
-       <p>You need more information? Check what other persons are saying<br>
+       <p class="footer-text">Get in touch</p>
+       <p class="footer-des">You need more information? Check what other persons are saying<br>
       about your products. They are very happy with their sell and purchase.</p>
-      <p><img src="images/cltn.png"> Find us at the office</p>
-      <p>House 1/2 Nurjahan Road<br>
+      <p class="cltn"><img src="images/cltn.png"> Find us at the office</p>
+      <p class="address">House 1/2 Nurjahan Road<br>
         Mohammadpur|Dhaka
       </p>
-      <p><img src="images/call.png">Give us a Ring</p>
-      <p>Phone:01763432203<br>
+      <p class="cltn"><img src="images/call.png">Give us a Ring</p>
+      <p class="address">Phone:01763432203<br>
        E-mail:rongtuli.net@gmail.com
       </p>
      </div>
      <div class="col-md-6">
+       <p class="contact contact-border">Contact Us</p>
+<form class="contact-form">
+  <div class="row">
+      <div class="col-md-6">
+    <input type="text" class="input-text" placeholder="First Name" name="firstname" >
+    </div>
+    <div class="col-md-6">
+    <input type="text" class="input-text" placeholder="Last Name"name="lastname"><br>
+    </div>
+  </div>
+  <input type="E-mail" class="email-text"  placeholder="E-mail Address" name="email"><br>
+ 
+  <textarea name="message" class="message-text" placeholder="Your message"></textarea><br>
+  <input type="submit" class="message-button" value="Send Message">
 
      </div>
    </div>
 
  </div>
+<!-- end contact-->
+<div class="footer-second">
+  <div class="row">
+    <div class="col-md-6">
+        <P class="about">About Us</P>
+        <p class="about-text">RongTuli is a new product of IngeniumBD.<br>
+       RongTuli is the first design marketplace in<br>
+     Bangladesh.Design is the journey of discovery<br>
+   following this we are creating this site for the <br>
+   designer & buyer. A designer can upload &<br>
+   sell their design from here.</p>
+    </div>
+    <div class="col-md-6">
+    <p class="terms">Terms & Conditions</p>
+    <a  class="term-link" href="">Our Terms & Condition</a>
+    <hr class="term-hr">
+    <a  class="term-link" href="">Designer Terms & Condition</a>
+    <hr class="term-hr">
+    <a  class="term-link" href="">Client Terms & Condition</a>
+    <hr class="term-hr">
+    <a  class="term-link" href="">Payment Terms & Condition</a>
+    <hr class="term-hr">
 
+    </div>
+  
+  </div>
+</div>
+<div class="last-session">
+  <h6 class="copyright">&copy; 2017 RongTuli. All copyright are reserved by ingeniumBD.</h6>
+</div>
 
   <!-- jQuery  -->
   <script src="js/jquery.min.js"></script>
