--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <div class="col-md-8 col-2">
         <img src="images/logo.png">
       </div>
-      <div class="col-md-1 col-4 button-margin">
+      <div class="col-md-2 col-4 button-margin">
         <div class="button ">
           <input type="button" class="submit " value="Become a seller">
         </div>
       </div>
-      <div class="col-md-1 col-4">
+      <div class="col-md-2 col-4 ">
         <div class="button ">
           <input type="button" class="submit" value="Become a buyer">
         </div>
@@ -170,9 +170,10 @@
 
 
           </li>
-          <li class="nav-item active">
-            <a class="nav-link disabled" href="#">Infographics</a>
-          </li>
+          <li class="nav-item active dropdown">
+            <a class="btn btn-secondary btn-sm dropdown-toggle dropbtn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Infographics
+            </a>
           <li class="nav-item active dropdown">
             <a class="btn btn-secondary btn-sm dropdown-toggle dropbtn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Icons
@@ -624,7 +625,6 @@
     </div>
   </div>
   <div>
-    
     <div class="secondsession-half">
 
       <div class="designs">
@@ -659,25 +659,26 @@
       </div>
     </div>
   </div>
+
   <div class="third-session">
-    <h2>Choose the right design for you,from our top charts</h2>
+    <h2 class="Text-align-center">Choose the right design for you,from our top charts</h2>
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-2 col-6">
         <img class="img-size animated fadeInUp " src="images/demo.png">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6">
         <img class="img-size  animated fadeInDown" style=" -webkit-animation-delay: 2s" src="images/demo.png">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6">
         <img class="img-size animated fadeInUp" style=" -webkit-animation-delay: 3s" src="images/demo.png">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6">
         <img class="img-size  animated fadeInDown" style=" -webkit-animation-delay: 4s;" src="images/demo.png">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6">
         <img class="img-size animated fadeInUp" style=" -webkit-animation-delay: 5s;" src="images/demo.png">
       </div>
-      <div class="col-md-2">
+     <div class="col-md-2 col-6">
         <img class="img-size  animated fadeInDown" style=" -webkit-animation-delay: 6s;" src="images/demo.png">
       </div>
     </div>
@@ -701,14 +702,14 @@
           <br> E-mail:rongtuli.net@gmail.com
         </p>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 col-12 form-align">
         <p class="contact contact-border">Contact Us</p>
         <form class="contact-form">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 col-6">
               <input type="text" class="input-text" placeholder="First Name" name="firstname">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-6">
               <input type="text" class="input-text" placeholder="Last Name" name="lastname">
               <br>
             </div>
@@ -752,7 +753,7 @@
     </div>
   </div>
   <div class="last-session">
-    <h6 class="copyright">&copy; 2017 RongTuli. All copyright are reserved by ingeniumBD.</h6>
+    <h6 class="copyright Text-align-center">&copy; 2017 RongTuli. All copyright are reserved by ingeniumBD.</h6>
   </div>
 
   <!-- jQuery  -->
