bootstrap container fluid

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <body>
 
   <div class="header">
+      <div class="container-fluid">
     <div class="row">
       <div class="col-md-8 col-2">
         <img src="images/logo.png">
@@ -39,6 +40,7 @@
           <input type="button" class="submit" value="Become a buyer">
         </div>
       </div>
+    </div>
     </div>
   </div>
 
@@ -591,7 +593,7 @@
 
   <div class="second-session">
     <div class="slider">
-
+        <div class="container-fluid">
       <div class="row">
         <div class="col-md-6 col-12 Text-align-center">
           <h4 class="text-font "> Beautiful Websites,
@@ -619,6 +621,7 @@
           </div>
         </div>
       </div>
+      </div>
 
       <!-- END OF TESTIMONIALS -->
 
@@ -628,6 +631,7 @@
     <div class="secondsession-half">
 
       <div class="designs">
+          <div class="container-fluid">
         <div class="row">
           <div class="col-md-4 col-12 Text-align-center">
             <img class="img-position animated fadeInUp" src="images/logofour.png" height="70px ">
@@ -658,10 +662,12 @@
         </div>
       </div>
     </div>
+    </div>
   </div>
 
   <div class="third-session">
     <h2 class="Text-align-center">Choose the right design for you,from our top charts</h2>
+    <div class="container-fluid">
     <div class="row">
       <div class="col-md-2 col-6">
         <img class="img-size animated fadeInUp " src="images/demo.png">
@@ -682,10 +688,11 @@
         <img class="img-size  animated fadeInDown" style=" -webkit-animation-delay: 6s;" src="images/demo.png">
       </div>
     </div>
-
+  </div>
   </div>
   <!--contact-->
   <div class="footer-one">
+      <div class="container-fluid">
     <div class="row">
       <div class="col-md-6">
         <p class="footer-text">Get in touch</p>
@@ -723,10 +730,12 @@
 
       </div>
     </div>
+    </div>
 
   </div>
   <!-- end contact-->
   <div class="footer-second">
+      <div class="container-fluid">
     <div class="row">
       <div class="col-md-6">
         <P class="about">About Us</P>
@@ -750,6 +759,7 @@
 
       </div>
 
+    </div>
     </div>
   </div>
   <div class="last-session">
